# windows10-themes-deb

./: .gitignore  Makefile.devel  Makefile.in  README.md  configure.ac
windows10-gtk-theme/: Makefile.devel  Makefile.in  changelog.Debian  configure.ac  control.in.in  copyright  fetch.sh
windows10-gtk-theme-dark/: Makefile.devel  Makefile.in  changelog.Debian  configure.ac  control.in.in  copyright
windows10-icon-theme/: .gitignore  Makefile.devel  Makefile.in  changelog.Debian  configure.ac  control.in.in  copyright  fetch.sh  postinst
